# cobalt-r6-surf

./: .gitignore  README.md  pyproject.toml
deploy/logrotate/: cobalt-boat
deploy/systemd/: cobalt-boat-healthcheck.service  cobalt-boat-healthcheck.timer  cobalt-boat.env  cobalt-boat.service  cobalt-boat.tmpfiles.conf
docs/: canboat-setup.md  deployment.md  design-spec.md  dev-handoff-and-git.md  fusion-ms-ra600-nmea-guide.md  garmin-glass-cockpit-integration-notes.md  message-catalog.md  message-whitelist.md  network-discovery.md  safety-model.md  shadow-caster-research-notes.md  software-inventory.md  system-design-guide.md  test-harness.md  web-ui-and-http.md
docs/adr/: 0001-deployment-logging-and-systemd.md  0002-offline-n2k-parse-validation.md  0003-lab-fusion-can-transmit.md  0004-web-ui-standard-http-telemetry.md  README.md
scripts/: cobalt-boat-healthcheck  cobalt-canboat-decoder  generate_vcan_traffic.sh  install_canboat.sh  install_systemd_service.sh  replay_candump.sh  setup_vcan.sh
src/cobalt_boat/: __init__.py  config.py  events.py  logging_config.py
src/cobalt_boat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/cobalt_boat/api/: app.py  schemas.py
src/cobalt_boat/can/: __init__.py  candump_parse.py  capture.py  decoder.py  interface.py  (+4 more)
tests/: test_api.py  test_candump_parser.py  test_config_defaults.py  test_decoder.py  test_decoder_selection.py  test_message_catalog.py  test_nmea2000_id.py  test_platform_startup.py  test_policy_engine.py  test_telemetry.py
tests/fixtures/: office_sample.candump
(+17 files in other folders)
