[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cobalt-boat"
version = "0.1.0"
description = "Safety-first event-driven automation platform for a Cobalt R6 Surf"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Cobalt Boat Engineering" }
]
dependencies = [
  "fastapi>=0.116,<1.0",
  "uvicorn>=0.35,<1.0",
  "python-can>=4.6,<5.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9.0",
  "httpx>=0.28,<1.0",
  "ruff>=0.12,<1.0",
  "mypy>=1.17,<2.0"
]

[project.scripts]
cobalt-boat-api = "cobalt_boat.api.app:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
